--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,8 @@ Flask-MySQLdb==1.0.1
 Flask-RESTful==0.3.10
 Flask-SQLAlchemy==3.0.5
 fonttools==4.42.0
+gevent==23.9.1
+greenlet==2.0.2
 gunicorn==21.2.0
 idna==3.4
 imageio==2.31.3
@@ -63,3 +65,5 @@ typing_extensions==4.7.1
 tzdata==2023.3
 urllib3==1.26.16
 Werkzeug==2.3.6
+zope.event==5.0
+zope.interface==6.0
